# Little-Fighter-2-Duplicate

./: CMakeLists.txt  README.docx  README.md
data/: data.txt
include/Attacks/: AttackBehavior.h  BoxAttack.h  HandsAttack.h  KnifeAttack.h  RockAttack.h
include/ComputerPlayerState/: AttackingState.h
include/Consts/: Consts.h
include/EventCommands/: BoxHitCommand.h  ExplodeCommand.h  HandsAttackCommand.h  ICommand.h  StoneHitCommand.h
include/Factory/: Factory.h
include/Gameplay/: Ally.h  Bandit.h  ComputerPlayer.h  Enemy.h  Level.h  Player.h  Squad.h
include/Management/: Animation.h  AnimationData.h  AnimationManager.h  CollisionHandling.h  Controller.h  DataLoader.h  GameManager.h  LevelLoader.h  ResourceManager.h  WorldBounds.h
include/ObjectStates/: ObjectBaseState.h
include/Objects/: BigWeapon.h  Drinkable.h  Object.h  PickableObject.h  PlayableObject.h  SmallWeapon.h
include/Objects/ObjectStates/: ExplodingObjState.h  HeldObjState.h  IdleObjState.h  ObjectBaseState.h  WalkingObjState.h
include/Objects/Weapons/: Box.h  Knife.h  Rock.h
include/PlayableObjectStates/: PlayableObjectState.h
include/PlayableObjectStates/ComputerPlayerState/: ApproachingEnemyState.h  AttackingState.h  BlockingState.h  ComputerPlayerState.h  DeadState.h  GotHitState.h  IdleState.h  KnockedDownState.h  PickingUpItemState.h  RetreatingState.h
include/PlayableObjectStates/PlayerStates/: AttackState.h  CollideWithObjectState.h  JumpingState.h  KnockedState.h  PlayerBaseState.h  PlayerDeadState.h  PlayerGotHitState.h  StandingState.h  WalkingState.h
include/PlayableObjectStates/PlayerStates/JumpBasePhase/: FallingPhase.h  HangingPhase.h  JumpPhaseBase.h  RisingPhase.h
include/PlayerStates/: AttackState.h  CollideWithObjectState.h  PlayerBaseState.h
include/Screens/: CharacterSelectScreen.h  IScreen.h  InGameScreen.h  LoadingScreen.h  LoseScreen.h  WelcomeScreen.h  WinScreen.h
include/UI/: HUD.h
include/data/: data.txt
levelsData/: level1.txt  level2.txt  level3.txt  levels.txt
src/: main.cpp
src/Attacks/: BoxAttack.cpp  HandsAttack.cpp  KnifeAttack.cpp  RockAttack.cpp
src/ComputerPlayerState/: ApproachingEnemyState.cpp  AttackingState.cpp  BlockingState.cpp  DeadState.cpp  GotHitState.cpp  IdleState.cpp  KnockedDownState.cpp  PickingUpItemState.cpp  RetreatingState.cpp
src/EventCommands/: BoxHitCommand.cpp  ExplodeCommand.cpp  HandsAttackCommand.cpp  StoneHitCommand.cpp
src/GamePlay/: Ally.cpp  Bandit.cpp  ComputerPlayer.cpp  Enemy.cpp  Level.cpp  Squad.cpp
src/Gameplay/: Player.cpp
src/Management/: Animation.cpp  AnimationManager.cpp  CollisionHandling.cpp  Controller.cpp  DataLoader.cpp  GameManager.cpp  LevelLoader.cpp  ResourceManager.cpp  Weapon.cpp  WorldBounds.cpp
src/Managements/: AnimationManager.cpp  CollisionHandling.cpp  Controller.cpp  DataLoader.cpp  ResourceManager.cpp  Weapon.cpp
src/Objects/: BigWeapon.cpp  Drinkable.cpp  Object.cpp  PickableObject.cpp  PlayableObject.cpp  SmallWeapon.cpp
src/Objects/ObjectState/: ExplodingObjState.cpp  HeldObjState.cpp  IdleObjState.cpp  WalkingObjState.cpp
src/Objects/Weapons/: Box.cpp  Knife.cpp  Rock.cpp
src/PlayerStates/: AttackState.cpp  CollideWithObjectState.cpp  JumpingState.cpp  KnockedState.cpp  PlayerDeadState.cpp  PlayerGotHitState.cpp  StandingState.cpp  WalkinState.cpp
src/PlayerStates/JumpPhaseBase/: FallingPhase.cpp  HangingPhase.cpp  RisingPhase.cpp
src/Screens/: CharacterSelectScreen.cpp  InGameScreen.cpp  LoadingScreen.cpp  LoseScreen.cpp  WelcomeScreen.cpp  WinScreen.cpp
src/States/: InGameState.cpp
src/UI/: HUD.cpp
